welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:27: error: type YELLOW is not a member of object java.awt.Color
    faireV( c: Color.YELLOW);
                     ^MethodsPicture:27: error: not found: value c
    faireV( c: Color.YELLOW);
            ^MethodsPicture:28: error: type RED is not a member of object java.awt.Color
    faireV( c: Color.RED);
                     ^MethodsPicture:28: error: not found: value c
    faireV( c: Color.RED);
            ^MethodsPicture:29: error: type BLUE is not a member of object java.awt.Color
    faireV( c: Color.BLUE);
                     ^MethodsPicture:29: error: not found: value c
    faireV( c: Color.BLUE);
            ^MethodsPicture:30: error: type GREEN is not a member of object java.awt.Color
    faireV( c: Color.GREEN);
                     ^MethodsPicture:30: error: not found: value c
    faireV( c: Color.GREEN);
            ^