welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def faireV(c : Color) {
  setCouleurBrosse( c )
  for (i <- 1 to 2){
    avance();
  }
  baisseBrosse();
  gauche();
  leveBrosse();
  avance();
  droite();
  avance();
  baisseBrosse(); 
  leveBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  gauche();
  leveBrosse();
  avance();
  avance();
  gauche();
}


def faireMotif() {
    faireV( c: Color.YELLOW);
    faireV( c: Color.RED);
    faireV( c: Color.BLUE);
    faireV( c: Color.GREEN);
  
  }


override def run() {
  for (k <- 1 to 3){
    faireMotif();
    for (j <- 1 to 7){
      avance();
    }
  }
}